# mcp-perplexity

./: .env.example  .gitignore  API_KEY_SETUP.md  CHANGELOG.md  README.md  mcp-perplexity.spec  pyproject.toml  setup.sh  validate_setup.py
.github/workflows/: pypi-publish.yml  release.yml
examples/: README.md  claude_desktop_config.json  cline_config.json  docker-compose.yml
src/mcp_perplexity/: __init__.py  database.py  perplexity_client.py  server.py
src/mcp_perplexity/web/: __init__.py  database_extension.py  routes.py
src/mcp_perplexity/web/templates/: _chat_list.html  _message_list.html  base.html  chat.html  error.html  index.html
templates/: .release_notes.md.j2  CHANGELOG.md.j2  changelog.md.j2  release_notes.md.j2
