[project]
name = "mcp-perplexity"
version = "0.5.0"
description = "MCP Server for the Perplexity API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ 
    "mcp>=1.0.0",
    "httpx",
    "haikunator>=2.1.0",
    "quart>=0.19.4",
    "sqlalchemy>=2.0.0",
    "hypercorn>=0.15.0",
    "markdown2>=2.4.0"
]

[project.urls]
Homepage = "https://github.com/daniel-lxs/mcp-perplexity"
Repository = "https://github.com/daniel-lxs/mcp-perplexity"

[[project.authors]]
name = "Daniel Riccio"
email = "ricciodaniel98@gmail.com"

[project.scripts]
mcp-perplexity = "mcp_perplexity:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_variable = ["__init__.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "python -m build"
changelog_components = "default"
changelog_sections = [
    { type = "feat", section = "What's New", hidden = false },
    { type = "fix", section = "Bug Fixes", hidden = false },
    { type = "perf", section = "Performance Improvements", hidden = false },
    { type = "docs", section = "Documentation", hidden = false },
    { type = "refactor", section = "Code Refactoring", hidden = false },
    { type = "BREAKING", section = "Breaking Changes", hidden = false },
    { type = "test", section = "Testing", hidden = true },
    { type = "build", section = "Build System", hidden = true },
    { type = "style", section = "Code Style", hidden = true },
    { type = "chore", section = "Maintenance", hidden = true },
    { type = "ci", section = "CI/CD", hidden = true }
]
commit_parser = "angular"
major_on_zero = false
tag_format = "v{version}"
