[project]
name = "mcp-perplexity"
version = "0.5.2"
description = "MCP Server for the Perplexity API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [ 
    "mcp>=1.0.0",
    "httpx",
    "haikunator>=2.1.0",
    "quart>=0.19.4",
    "sqlalchemy>=2.0.0",
    "hypercorn>=0.15.0",
    "markdown2>=2.4.0"
]

[project.urls]
Homepage = "https://github.com/daniel-lxs/mcp-perplexity"
Repository = "https://github.com/daniel-lxs/mcp-perplexity"

[[project.authors]]
name = "Daniel Riccio"
email = "ricciodaniel98@gmail.com"

[project.scripts]
mcp-perplexity = "mcp_perplexity:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pyinstaller>=6.3.0"]

[tool.semantic_release]
version_variable = ["src/mcp_perplexity/__init__.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "python -m build"
commit_parser = "angular"
major_on_zero = false
tag_format = "v{version}"
# Explicitly disable templates
templates_dir = ""

# Changelog configuration with proper section titles
[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
changelogTitle = "# Changelog"

# Define sections for changelog
[[tool.semantic_release.changelog.sections]]
type = "feat"
section = "Features"
hidden = false

[[tool.semantic_release.changelog.sections]]
type = "fix"
section = "Bug Fixes"
hidden = false

[[tool.semantic_release.changelog.sections]]
type = "perf"
section = "Performance Improvements"
hidden = false

[[tool.semantic_release.changelog.sections]]
type = "docs"
section = "Documentation"
hidden = false

[[tool.semantic_release.changelog.sections]]
type = "style"
section = "Code Style"
hidden = false

[[tool.semantic_release.changelog.sections]]
type = "refactor"
section = "Code Refactoring"
hidden = false

[[tool.semantic_release.changelog.sections]]
type = "test"
section = "Tests"
hidden = false

[[tool.semantic_release.changelog.sections]]
type = "build"
section = "Build System"
hidden = false

[[tool.semantic_release.changelog.sections]]
type = "ci"
section = "Continuous Integration"
hidden = false

[[tool.semantic_release.changelog.sections]]
type = "chore"
section = "Maintenance"
hidden = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"mcp_perplexity.web" = ["templates/*.html"]
